--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,11 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>Estoy en la rama Master de mi blog</p>
+                <p>Y realizaremos un merge</p>
+
             </div>
         </div>
     </body>
