agregue la subscripcion y puse enm otro color

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,8 @@
                 <p>Estoy en la rama Master de mi blog</p>
                 <p>Y realizaremos un merge</p>
 
+                <p>Suscribete y dale Like!</p>
+
 
             </div>
         </div>
