--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera1">
-                Cabecera ejemplo
+                Cabecera ejemplo en mi nuevo post
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
